# heightcameraestimation

./: CMakeLists.txt  Camera_Height.cpp  Camera_Height.h  README.md  package.xml  subKinect.cpp
src/: Camera_Height.cpp  Camera_Height_main.cpp  subKinect.cpp
